package org.example.Models.Enums;

public enum Status {
    ATIVA,
    ABERTA_MATRICULA,
    CANCELADA
}
