// colocar metodo associar/ remover à alguma turma  professor na classe secretaria ou na classe turma

@startuml
skinparam classAttributeIconSize 0

class Pessoa {
#id: String
#nome: String
#senha: String
+login(String senha, String id): boolean
}

Pessoa <|-- Secretaria
Pessoa <|-- Aluno
Pessoa <|-- Professor

class Secretaria {
+gerarCurriculo(): void
+cadastrarCurso(): Curso
}

class Aluno  {
-creditos: int
-curso: Curso
+matricularDisciplinaObrigatoria(idDisciplina: int): void
+matricularDisciplinaOptativa(idDisciplina: int): void
+cancelarMatricula(idDisciplina: int): void
}

class Professor  {
+visualizarAlunosMatriculados(): List<Aluno>
}

class Curso {
-id: int
-nome: String
-CREDITOS: int {static}
+adicionarDisciplina(disciplina: Disciplina): void
+removerDisciplina(idDisciplina: int): void
}

class Disciplina {
-id: int
-nome: String
-curso: Curso
-status: Status
-CREDITOS: int {static}
-NUMERO_MINIMO_ALUNOS: int {static}
-NUMERO_MAXIMO_ALUNOS: int {static}
-validarNumeroMinimoDeAlunos(): boolean
-cancelarDisciplina(): boolean
}

class Turma{
-professor: Professor
-disciplina: Disciplina
-semestre: String
-ano: String
-alunos: List<Aluno>
+adicionarAluno(aluno: Aluno): List<Aluno>
+removerAluno(aluno: Aluno): List<Aluno>
+selecionarProfessor(professor: Professor): Professor
}

enum Status{
ATIVA
ABERTA_MATRICULA
CANCELADA
}

Curso - Disciplina

Aluno -- Curso

Turma -- Disciplina
Turma --- Professor
Turma --- Aluno

Disciplina -- Status

@enduml